Fix dark mode

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -583,8 +583,8 @@ body {
         --content-danger-bold: var(--red-100);
         --content-success-bold: var(--green-100);
         --background-primary: var(--neutral-cool-900);
-        --background-secondary: var(--neutral-cool-850);
-        --background-tertiary: var(--neutral-cool-800);
+        --background-secondary: var(--neutral-cool-800);
+        --background-tertiary: var(--neutral-cool-850);
         --background-warning-subtle: var(--orange-850);
         --background-danger-subtle: var(--red-800);
         --background-success-subtle: var(--green-800);
